add failure policy and pause (#126)
