# api/openapi-spec/swagger.json
@@ -66,9 +66,17 @@
           "description": "CompletionPolicy indicates the completion policy of the job. Default is Always CompletionPolicyType",
           "$ref": "#/definitions/kruise.apps.v1alpha1.CompletionPolicy"
         },
+        "failurePolicy": {
+          "description": "FailurePolicy indicates the behavior of the job, when failed pod is found.",
+          "$ref": "#/definitions/kruise.apps.v1alpha1.FailurePolicy"
+        },
         "parallelism": {
           "description": "Parallelism specifies the maximum desired number of pods the job should run at any given time. The actual number of pods running in steady state will be less than this number when the work left to do is less than max parallelism. Not setting this value means no limit.",
           "$ref": "#/definitions/io.k8s.apimachinery.pkg.util.intstr.IntOrString"
+        },
+        "paused": {
+          "description": "Paused will pause the job.",
+          "type": "boolean"
         },
         "template": {
           "description": "Template describes the pod that will be created when executing a job.",
@@ -108,6 +116,10 @@
           "type": "integer",
           "format": "int32"
         },
+        "phase": {
+          "description": "The phase of the job.",
+          "type": "string"
+        },
         "startTime": {
           "description": "Represents time when the job was acknowledged by the job controller. It is not guaranteed to be set in happens-before order across separate operations. It is represented in RFC3339 form and is in UTC.",
           "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.Time"
@@ -128,11 +140,6 @@
           "type": "integer",
           "format": "int64"
         },
-        "backoffLimit": {
-          "description": "BackoffLimit specifies the number of retries before marking this job failed. Not setting value means no limit. Only works for Always type.",
-          "type": "integer",
-          "format": "int32"
-        },
         "ttlSecondsAfterFinished": {
           "description": "ttlSecondsAfterFinished limits the lifetime of a Job that has finished execution (either Complete or Failed). If this field is set, ttlSecondsAfterFinished after the Job finishes, it is eligible to be automatically deleted. When the Job is being deleted, its lifecycle guarantees (e.g. finalizers) will be honored. If this field is unset, the Job won't be automatically deleted. If this field is set to zero, the Job becomes eligible to be deleted immediately after it finishes. This field is alpha-level and is only honored by servers that enable the TTLAfterFinished feature. Only works for Always type",
           "type": "integer",
@@ -140,6 +147,25 @@
         },
         "type": {
           "description": "Type indicates the type of the CompletionPolicy Default is Always",
+          "type": "string"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.FailurePolicy": {
+      "description": "FailurePolicy indicates the behavior of the job, when failed pod is found.",
+      "type": "object",
+      "required": [
+        "Type",
+        "RestartLimit"
+      ],
+      "properties": {
+        "RestartLimit": {
+          "description": "RestartLimit specifies the number of retries before marking the pod failed.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "Type": {
+          "description": "Type indicates the type of FailurePolicyType.",
           "type": "string"
         }
       }
